# shirube

./: .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.claude/hooks/: post-commit-version-bump.sh  pre-commit-version-bump.sh
.github/workflows/: ci.yml  release.yml
docs/: bitflyer-api-spec.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/components/: BalancePanel.svelte  ChartPanel.svelte  Header.svelte  NewsPanel.svelte  OrdersPanel.svelte  SettingsPanel.svelte  SignalPanel.svelte  StatusBar.svelte
frontend/src/lib/: api.ts  stores.ts  types.ts  ws.ts
frontend/static/: index.html
frontend/static/assets/: index-BfGntlpl.js  index-Bpnb1q-O.css  index-C3DxJHzr.js  index-OdYeAIDX.js  index-hUJNG6Y1.js
src/: config.rs  error.rs  main.rs
src/alert/: mod.rs
src/api/: mod.rs  server.rs  ws_handler.rs
src/api/routes/: backtest.rs  balance.rs  candles.rs  config.rs  indicators.rs  mod.rs  news.rs  orders.rs  signal.rs  ticker.rs
src/backtest/: downloader.rs  mod.rs  report.rs  simulator.rs
src/exchange/: mock.rs  mod.rs  rate_limiter.rs
src/exchange/bitflyer/: auth.rs  mod.rs  (+3 more)
src/market/: bus.rs  candle_aggregator.rs  mod.rs
src/news/: analyzer.rs  fetcher.rs  mod.rs  scorer.rs
src/risk/: manager.rs  mod.rs
src/signal/: engine.rs  mod.rs
src/storage/: backtest_runs.rs  candles.rs  config.rs  db.rs  mock_state.rs  mod.rs  news_sentiments.rs  orders.rs  schema.rs  tickers.rs  trades.rs
src/trading/: engine.rs
src/types/: balance.rs  market.rs  mod.rs  order.rs
src/updater/: mod.rs
(+5 files in other folders)
