[package]
name = "shirube"
version = "0.1.100"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "shirube"
path = "src/main.rs"

[[bin]]
name = "migrate_candles_to_tickers"
path = "src/bin/migrate_candles_to_tickers.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
rust_decimal_macros = "1.35"
async-trait = "0.1"
url = "2.5"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-stream = "0.1"
feed-rs = "2"
rustls = { version = "0.23", features = ["ring"] }
self_update = { version = "0.44", default-features = false, features = [
    "archive-tar",
    "compression-flate2",
    "reqwest",
    "rustls",
] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
